--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hanshin.imprintedsaga">
-
+    package="com.hanshin.ncs_imprintsaga">
 
     <application
         android:allowBackup="true"
@@ -22,9 +21,7 @@
         <activity android:name=".ShopActivity" android:label="Shop"> </activity>
     </application>
 
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
 </manifest>
