--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,6 +28,8 @@
         <activity
             android:name=".BattleActivity"
             android:label="Shop" />
+        <activity android:name=".ResultActivity" android:label="google login"> </activity>
+        <activity android:name=".StageActivity" android:label="Main"> </activity>
     </application>
 
 </manifest>
