--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity
             android:name=".BattleActivity"
             android:label="Shop" />
-        <activity android:name=".ResultActivity" android:label="google login"> </activity>
+        <activity android:name=".SettingActivity" android:label="google login"> </activity>
         <activity android:name=".StageActivity" android:label="Main"> </activity>
     </application>
 
