--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".BattleActivity"
             android:label="Shop" />
+        <activity
+            android:name=".TrainingActivity"
+            android:label="Training" />
         <activity android:name=".SettingActivity" android:label="google login"> </activity>
         <activity android:name=".StageActivity" android:label="Main"> </activity>
     </application>
